--- a/backend/FileCloudAPI/src/main/resources/application.properties
+++ b/backend/FileCloudAPI/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/FileCloudDB?useSSL=false&allow
 spring.datasource.username=root
 spring.datasource.password=mutemute1085123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-file.upload-dir=C:/FileCloudProject/frontend/mediafile
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
